tests/idris2/basic030/expected
1/1: Building arity (arity.idr)
Error: While processing right hand side of foo. When unifying (1 _ : Nat) -> MyN and MyN.
Mismatch between: (1 _ : Nat) -> MyN and MyN.

arity.idr:4:16--4:21
   |
 4 | foo x y = case MkN x of
   |                ^^^^^

